--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -7,28 +7,23 @@
    "source": [
     "# `00-setup` Notebook\n",
     "\n",
-    "Notebooks are numbered in the order they should be run (for data import projects) or according to a table of contents:\n",
+    "Experiments with Neo4j and OSMnx.\n",
     "\n",
-    "* `00-setup` - initial environment setup and proof of concept\n",
-    "* `01-explore` - exploratory data analysis"
+    "* `00-setup` - Basic proof of concept, loading a OSMnx graph into Neo4j via GeoDataFrame"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b752ab4b",
+   "cell_type": "markdown",
+   "id": "cbb102ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Hello, World\")"
+    "## TODO: \n",
+    "    - [ ] create basic OSMnx graph\n",
+    "    - [ ] simplify network (intersections)\n",
+    "    - [ ] enrich with speed / travel time\n",
+    "    - [ ] enrich with elevation (Google elev API)\n",
+    "    - [ ] convert to GeoDataFrame\n",
+    "    - [ ] load GeoDataFrame into Neo4j"
    ]
   },
   {
