add points of interest

--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -9,21 +9,24 @@
     "\n",
     "Experiments with Neo4j and OSMnx.\n",
     "\n",
-    "* `00-setup` - Basic proof of concept, loading a OSMnx graph into Neo4j via GeoDataFrame"
+    "* `00-setup` - Basic proof of concept, loading a OSMnx graph into Neo4j via GeoDataFrame\n",
+    "* `01-poi-enrich` - Add points of interest from Daylight Earth Table OpenStreetMap distribution\n",
+    "* `01-addresses-enrich` - Enrich with address data from OpenAddresses"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2613b139",
+   "id": "c2a555b8",
    "metadata": {},
    "source": [
     "## TODO: \n",
-    "    - [ ] create basic OSMnx graph\n",
-    "    - [ ] simplify network (intersections)\n",
-    "    - [ ] enrich with speed / travel time\n",
-    "    - [ ] enrich with elevation (Google elev API)\n",
-    "    - [ ] convert to GeoDataFrame\n",
-    "    - [ ] load GeoDataFrame into Neo4j"
+    "\n",
+    "- [x] create basic OSMnx graph\n",
+    "- [x] simplify network (intersections)\n",
+    "- [ ] enrich with speed / travel time\n",
+    "- [ ] enrich with elevation (Google elev API)\n",
+    "- [x] convert to GeoDataFrame\n",
+    "- [x] load GeoDataFrame into Neo4j"
    ]
   },
   {
@@ -41,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "af195de9",
+   "id": "15e6ee90",
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +65,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "id": "7bd96e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: enrich with elevation data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "af370b8b",
+   "id": "a2dd2214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "1f9543e7",
+   "id": "5c44fc37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "d5a91c92",
+   "id": "ee076e46",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "db60831b",
+   "id": "815e0f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "8ce84bb3",
+   "id": "893a9ca4",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd0aaf2",
+   "id": "e840f55d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07733ce8",
+   "id": "5d39d1a5",
    "metadata": {},
    "source": [
     "![](../img/data_model.png)"
@@ -417,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "70287119",
+   "id": "1cdbf783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "2ff11749",
+   "id": "c9d016ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "06d5106b",
+   "execution_count": 142,
+   "id": "40abb06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,6 +518,7 @@
     "    nodes_result = insert_data(node_query, nodes, batch_size)\n",
     "    \n",
     "    # TODO: convert geometry from linestring to [Point]\n",
+    "    # TODO: convert maxspeed to integer\n",
     "    rels_query = '''\n",
     "    UNWIND $rows AS road\n",
     "    MATCH (u:Intersection {osmid: road.u})\n",
@@ -528,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "d25695cd",
+   "id": "93bc395d",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c70a296",
+   "id": "348cbddd",
    "metadata": {},
    "outputs": [],
    "source": [
