--- a/notebooks/01-poi-enrich.ipynb
+++ b/notebooks/01-poi-enrich.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b345e217",
+   "id": "ab376182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,8 @@
     "- [x] iterate over dataframe to add pois to neo4j\n",
     "- [x] bounding box to specify areas to include (think of a better way to do this)\n",
     "- [x] find nearest intersection to attach poi node\n",
-    "- [ ] demonstrate routing between pois using apoc.algo.djikstra and apoc.algo.aStar\n"
+    "- [ ] demonstrate routing between pois using apoc.algo.djikstra and apoc.algo.aStar\n",
+    "- [ ] document where to get data, or possibly use the API?\n"
    ]
   },
   {
@@ -2712,6 +2713,13 @@
    "id": "53aae8ef",
    "metadata": {},
    "source": [
+    "Create a POINT index on Intersection.location:\n",
+    "\n",
+    "```Cypher\n",
+    "CREATE POINT INDEX FOR (i:Intersection) ON i.location\n",
+    "```\n",
+    "\n",
+    "\n",
     "Attach each `PointOfInterest` node to the near `Intersection` node:\n",
     "\n",
     "```Cypher\n",
@@ -2720,7 +2728,8 @@
     "CALL {\n",
     "  WITH p\n",
     "  MATCH (i:Intersection)\n",
-    "  WHERE point.distance(p.location, i.location) < 2000\n",
+    "  USING INDEX i:Intersection(location)\n",
+    "  WHERE point.distance(i.location, p.location) < 2000\n",
     "  WITH i\n",
     "  ORDER BY point.distance(p.location, i.location) ASC \n",
     "  LIMIT 1\n",
@@ -2745,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ac070c",
+   "id": "8df0158a",
    "metadata": {},
    "outputs": [],
    "source": [
