--- a/notebooks/02-addresses-enrich.ipynb
+++ b/notebooks/02-addresses-enrich.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00db573d",
+   "id": "d4626bc7",
    "metadata": {},
    "source": [
     "# `01-addresses-enrich` - Adding Addresses from OpenAddresses\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e671cbfa",
+   "id": "8ddd00d0",
    "metadata": {},
    "source": [
     "# TODOs\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e2d2d8f",
+   "id": "5fbf9245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "786f8356",
+   "id": "d344f192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa480b9",
+   "id": "076b4934",
    "metadata": {},
    "source": [
     "```Cypher\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50c575df",
+   "id": "60e89221",
    "metadata": {},
    "source": [
     "Create `Address` nodes for each feature in geojson file:\n",
@@ -97,9 +97,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "380294e7",
+   "metadata": {},
+   "source": [
+    "Route between an address and point of interest:\n",
+    "\n",
+    "```Cypher\n",
+    "MATCH (a:Address)-[:NEAREST_INTERSECTION]->(source:Intersection)\n",
+    "WHERE a.full_address CONTAINS \"410 E 5TH AVE SAN MATEO, CA\"\n",
+    "MATCH \n",
+    "  (poi:PointOfInterest)-[:NEAREST_INTERSECTION]->(dest:Intersection) \n",
+    "WHERE poi.geometry_id = \"w914450392@1\"\n",
+    "CALL apoc.algo.dijkstra(source, dest, \"ROAD_SEGMENT\", \"length\") \n",
+    "YIELD weight, path\n",
+    "WITH [ x in nodes(path) | {latitude: x.location.latitude, longitude: x.location.longitude}] AS route, weight AS totalDist\n",
+    "RETURN *\n",
+    "```\n",
+    "\n",
+    "![](../img/address_routing.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85211ee9",
+   "id": "5f425f0d",
    "metadata": {},
    "outputs": [],
    "source": []
